Added vm01 creation step

--- a/roles/kvm/templates/pool/dir.xml.j2
+++ b/roles/kvm/templates/pool/dir.xml.j2
@@ -1,6 +1,6 @@
 <pool type="dir">
-  <name>{{ image_pool_name }}</name>
+  <name>images</name>
   <target>
-    <path>{{ libvirt_folder }}</path>
+    <path>/var/lib/libvirt/images</path>
   </target>
 </pool>
