--- a/roles/kvm/templates/vm01_network-config.yml.j2
+++ b/roles/kvm/templates/vm01_network-config.yml.j2
@@ -1,9 +1,15 @@
 version: 2
 ethernets:
   ens2:
-     dhcp4: false
-     # default libvirt network
-     addresses: [ 192.168.122.111/24 ]
-     gateway4: 192.168.122.1
-     nameservers:
-       addresses: [ 192.168.122.1,8.8.8.8 ]
+    dhcp4: false
+    # default libvirt network
+    addresses: [ 192.168.122.111/24 ]
+    nameservers:
+      addresses: [ 192.168.122.1,8.8.8.8 ]
+    routes:
+    - to: 0.0.0.0/0
+      via: 192.168.1.236
+      metric: 100
+    - to: 0.0.0.0/0
+      via: 192.168.122.1
+      metric: 100
