--- a/roles/kvm/templates/vm02_cloud-config.yml.j2
+++ b/roles/kvm/templates/vm02_cloud-config.yml.j2
@@ -31,8 +31,8 @@ packages:
   - software-properties-common
 bootcmd:
    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-   - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-   - sudo apt-get update
-   - sudo apt-get install docker-ce docker-ce-cli containerd.io
+   - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+   - apt-get update
+   - apt-get install docker-ce docker-ce-cli containerd.io
 # written to /var/log/cloud-init-output.log
 final_message: "The system is finally up, after $UPTIME seconds"
